# Asterism

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BLUEPRINT.md  Dockerfile  Makefile  README.md  RULES.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.clinerules/: format.md
.github/workflows/: docs.yml
asterism/: api_server.py
asterism/agent/: agent.py
asterism/agent/graph_builders/: base.py  full_graph.py
asterism/api/: main.py  models.py
asterism/api/routes/: chat.py  (+3 more)
asterism/config/: config.py
asterism/core/: __init__.py  prompt_loader.py
asterism/llm/: __init__.py  base.py  factory.py  openai_provider.py  provider_router.py
asterism/mcp/: config.py  executor.py
docs/: index.md
docs/api-reference/: chat-completions.md  config.md  health.md  models.md  openapi.md  overview.md
docs/architecture/: overview.md  state.md  workflow.md
docs/configuration/: config-yaml.md  environment.md  providers.md
docs/development/: code-style.md  contributing.md  testing.md
docs/getting-started/: docker.md  installation.md  quick-start.md
docs/mcp/: configuration.md  custom-servers.md  overview.md  transports.md
docs/workspace/: agent.md  overview.md  personality.md  soul.md
example_project/: complex_functions.py  utils.py
src/: main.py
src/agent/: graph.py  state.py
src/config/: mcp_servers.json
src/servers/: code_parser.py  filesystem.py
tests/integration_tests/: conftest.py  test_agent.py
workspace/: AGENT.md  PERSONALITY.md
workspace-default/: PERSONALITY.md  SOUL.md  config.yaml
workspace/mcp_servers/: mcp_servers.json
(+112 files in other folders)
